[package]
name = "little_game"
version = "0.1.0"
authors = ["Mårten Åsberg <marten.asberg@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"

[dependencies]
kiss3d = { version = "0.31.0", features = ["conrod"] }
phf = { version = "0.8.0", features = ["macros"] }
rand = "0.8.3"
