[package]
name = "little_game"
version = "0.1.0"
authors = ["Mårten Åsberg <marten.asberg@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"

[lib]
crate-type = ["cdylib"]

[dependencies]
instant = { version = "0.1.9", features = ["wasm-bindgen"] }
kiss3d = { version = "0.31.0", features = ["conrod"] }
phf = { version = "0.8.0", features = ["macros"] }
rand = { version = "0.8.3", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.126", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
webbrowser = "0.5.5"
